--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
 
@@ -73,7 +74,6 @@
 		}
 
 		const styles = [
-			"css/bootstrap.css",
 			"css/owl.transitions.css",
 			"css/owl.carousel.css",
 			"css/animate.css",
